# backend/backend/Data/Entities/ItemTag.cs
@@ -1,4 +1,6 @@
 using System.ComponentModel.DataAnnotations;
+using System.ComponentModel.DataAnnotations.Schema;
+using backend.Data.Entities.Owned;
 
 namespace backend.Data.Entities;
 
@@ -13,4 +15,6 @@ public class ItemTag : BaseEntity
 
     public string OwnerId { get; set; }
     public ApiUser Owner { get; set; }
+
+    [Column(TypeName = "jsonb")] public IEnumerable<ItemTagFieldGroup> FieldGroups { get; set; }
 }
