# backend/backend/Data/Entities/Owned/ItemTagField.cs
@@ -1,0 +1,10 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace backend.Data.Entities.Owned;
+
+public class ItemTagField
+{
+    [Required] public string Name { get; set; }
+
+    [Required] public string Value { get; set; }
+}
