# backend/backend/Data/Entities/Owned/ItemTagFieldGroup.cs
@@ -1,0 +1,10 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace backend.Data.Entities.Owned;
+
+public class ItemTagFieldGroup
+{
+    [Required] public string Language { get; set; }
+
+    [Required] public List<ItemTagField> Fields { get; set; }
+}
