# backend/backend/Models/Requests/CreateItemTagRequest.cs
@@ -1,0 +1,11 @@
+using System.ComponentModel.DataAnnotations;
+using backend.Data.Entities.Owned;
+
+namespace backend.Models.Requests;
+
+public class CreateItemTagRequest
+{
+    [Required] [MaxLength(256)] public string Name { get; set; }
+    [Required] [MaxLength(2024)] public string Description { get; set; }
+    [Required] public ItemTagFieldGroup[] FieldGroups { get; set; }
+}
